--- a/.env.template
+++ b/.env.template
@@ -2,11 +2,11 @@
 PORT=3000
 PUBLIC_PATH=public
 
-POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
+POSTGRES_URL="postgresql://postgres:BMiYNBzRgRfgbmfvQfxlkcPSpJmFsmge@postgres.railway.internal:5432/railway"
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
-POSTGRES_PORT=5432
-POSTGRES_PASSWORD=1
+POSTGRES_PORT=
+POSTGRES_PASSWORD=
 
 
 
