--- a/.env.template
+++ b/.env.template
@@ -2,15 +2,14 @@
 PORT=3000
 PUBLIC_PATH=public
 
-POSTGRES_URL="postgresql://postgres:BMiYNBzRgRfgbmfvQfxlkcPSpJmFsmge@postgres.railway.internal:5432/railway"
+POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
-POSTGRES_PORT=
-POSTGRES_PASSWORD=
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=1
 
 
 
 
 
 NODE_ENV=development
-
