--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
 
 PORT=3000
 PUBLIC_PATH=public
-
-POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
+POSTGRES_URL=postgresql://postgres:UyLjohuNbhqAcgCewYpHIAQTxeaxkWkk@postgres.railway.internal:5432/railway
+# POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
 POSTGRES_PORT=5432
