--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 
 PORT=3000
 PUBLIC_PATH=public
-POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
+POSTGRES_URL=
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
 POSTGRES_PORT=5432
