--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 
 PORT=3000
 PUBLIC_PATH=public
-POSTGRES_URL=
+POSTGRES_URL=postgresql://postgres:vbdhCYFsnLhzDcWTMDxLgquujkdtRqcI@roundhouse.proxy.rlwy.net:42285/railway
+# POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
 POSTGRES_PORT=5432
@@ -9,3 +10,4 @@ POSTGRES_PASSWORD=1
 
 
 NODE_ENV=development
+
