--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,12 @@
 
-PORT=3000
+PORT=
 PUBLIC_PATH=public
-POSTGRES_URL=postgresql://postgres:vbdhCYFsnLhzDcWTMDxLgquujkdtRqcI@roundhouse.proxy.rlwy.net:42285/railway
-# POSTGRES_URL="postgresql://postgres:1@localhost:5432/TODO?schema=public"
-POSTGRES_USER=postgres
-POSTGRES_DB=TODO
-POSTGRES_PORT=5432
-POSTGRES_PASSWORD=1
+POSTGRES_URL=
+POSTGRES_USER=
+POSTGRES_DB=
+POSTGRES_PORT=
+POSTGRES_PASSWORD=
 
 
-NODE_ENV=development
+NODE_ENV=
 
